Comment out market performance plots for selected and raw tickers in P&L comparison

--- a/2_linear_model.ipynb
+++ b/2_linear_model.ipynb
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "55bcc7e7",
    "metadata": {},
    "outputs": [
@@ -2733,10 +2733,10 @@
     "plt.figure(figsize=(20, 13))\n",
     "\n",
     "plt.plot(PNL_data.index, PNL_data['Return_Predicted_Test'], label='Selected Tickers - Model performance', linewidth=linewidth_model, color='coral')\n",
-    "plt.plot(PNL_data.index, PNL_data['Market_Return_Test'], label='Selected Tickers - Market performance', linewidth=linewidth_market, color='darkred')\n",
+    "#plt.plot(PNL_data.index, PNL_data['Market_Return_Test'], label='Selected Tickers - Market performance', linewidth=linewidth_market, color='darkred')\n",
     "\n",
     "plt.plot(PNL_data_raw.index, PNL_data_raw['Return_Predicted_Test'], label='Raw Tickers - Model performance', linewidth=linewidth_model, color='cyan')\n",
-    "plt.plot(PNL_data_raw.index, PNL_data_raw['Market_Return_Test'], label='Raw Tickers - Market performance', linewidth=linewidth_market, color='darkblue')\n",
+    "#plt.plot(PNL_data_raw.index, PNL_data_raw['Market_Return_Test'], label='Raw Tickers - Market performance', linewidth=linewidth_market, color='darkblue')\n",
     "\n",
     "plt.xlabel('Start Date')\n",
     "plt.ylabel('Cumulative Returns')\n",
