Remove unused imports and reset execution count in linear model notebook

--- a/2_linear_model.ipynb
+++ b/2_linear_model.ipynb
@@ -2,22 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "0f5cf57b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly as px\n",
     "\n",
     "import sklearn as sklearn\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
-    "from sklearn.metrics import precision_score, f1_score, recall_score"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
