Refactor code structure for improved readability and maintainability

--- a/1_data_features.ipynb
+++ b/1_data_features.ipynb
@@ -2,21 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 1,
    "id": "486d0cc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 2,
    "id": "58fda4e8",
    "metadata": {},
    "outputs": [],
@@ -26,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 3,
    "id": "e5e3f6fa",
    "metadata": {},
    "outputs": [],
@@ -38,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 4,
    "id": "cdaa0065",
    "metadata": {},
    "outputs": [],
@@ -48,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 5,
    "id": "2f7a949b",
    "metadata": {},
    "outputs": [],
@@ -59,10 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "id": "451371fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'shift'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 65\u001b[39m\n\u001b[32m     63\u001b[39m     \u001b[38;5;66;03m#Target signal to predict\u001b[39;00m\n\u001b[32m     64\u001b[39m     data[(ticker, \u001b[33m'\u001b[39m\u001b[33mSignal\u001b[39m\u001b[33m'\u001b[39m)] = signal\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m     data[(ticker, \u001b[33m'\u001b[39m\u001b[33mSignal\u001b[39m\u001b[33m'\u001b[39m)] = \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mticker\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSignal\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshift\u001b[49m(-\u001b[32m1\u001b[39m).ffill(\u001b[32m0\u001b[39m)  \u001b[38;5;66;03m# Shift signal to align with next day's return\u001b[39;00m\n\u001b[32m     67\u001b[39m \u001b[38;5;66;03m# Create a DataFrame from the collected data\u001b[39;00m\n\u001b[32m     68\u001b[39m new_columns_df = pd.DataFrame(data)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'shift'"
+     ]
+    }
+   ],
    "source": [
     "# Signal trigger\n",
     "Trigger_up = 0.005\n",
@@ -107,6 +116,10 @@
     "            data[(ticker, f'{serie}_MA_{N}')] = matrice.rolling(window=N).mean() / matrice\n",
     "            data[(ticker, f'{serie}_STD_{N}')] = matrice.rolling(window=N).std() / matrice.rolling(window=N).mean()\n",
     "            data[(ticker, f'{serie}_GROWTH_{N}')] = (close / close.shift(N)) ** (252 / N) - 1\n",
+    "\n",
+    "            data[(ticker, f'{serie}_Above_MA_{N}')] = (matrice > data[(ticker, f'{serie}_MA_{N}')]).astype(int)\n",
+    "            data[(ticker, f'{serie}_Above_STD_{N}')] = (matrice > data[(ticker, f'{serie}_STD_{N}')]).astype(int)\n",
+    "            \n",
     "    \n",
     "    for serie in Series_dict.keys():\n",
     "        matrice = Series_dict[serie]\n",
@@ -115,12 +128,18 @@
     "            data[(ticker, f'{serie}_STD_{N}')] = matrice.rolling(window=N).std() / matrice.rolling(window=N).mean()\n",
     "            data[(ticker, f'{serie}_GROWTH_{N}')] = (close / close.shift(N)) ** (252 / N) - 1\n",
     "\n",
+    "            data[(ticker, f'{serie}_Above_TREND_{N}')] = (matrice > data[(ticker, f'{serie}_TREND_{N}')]).astype(int)\n",
+    "            data[(ticker, f'{serie}_Above_STD_{N}')] = (matrice > data[(ticker, f'{serie}_STD_{N}')]).astype(int)\n",
+    "\n",
     "    for N in MA_N:\n",
     "        # Correlation with VIX\n",
     "        data[(ticker, f'Close_CORR_{N}')] = data[(ticker, f'Close_STD_{N}')].rolling(window=N).corr(data_raw[('^VIX', 'Close')].rolling(window=N).mean())\n",
     "        \n",
     "    #Target signal to predict\n",
     "    data[(ticker, 'Signal')] = signal\n",
+    "    shifted_signal = np.empty_like(signal)\n",
+    "    shifted_signal[:-1] = signal[1:]      # shift by -1\n",
+    "    shifted_signal[-1] = 0                # fill the gap with 0  # Shift signal to align with next day's return\n",
     "\n",
     "# Create a DataFrame from the collected data\n",
     "new_columns_df = pd.DataFrame(data)\n",
@@ -131,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "id": "50888006",
    "metadata": {},
    "outputs": [
@@ -173,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "id": "20b74bbe",
    "metadata": {},
    "outputs": [],
