--- a/2_lasso_model.ipynb
+++ b/2_lasso_model.ipynb
@@ -9,13 +9,12 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import sklearn as sklearn\n",
+    "from sklearn.model_selection import TimeSeriesSplit, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import Lasso\n",
-    "from sklearn.metrics import precision_score, f1_score, recall_score"
+    "from sklearn.linear_model import Lasso"
    ]
   },
   {
@@ -325,6 +324,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "74d4ea8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-7.010368294479177)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DD_CDE = data_features.CDE.DD_Return\n",
+    "np.sum(DD_CDE * data_features.CDE.Signal.shift(-1)) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "65ec1130",
    "metadata": {},
@@ -333,6 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Data filtered to include only rows after 2005-08-10 00:00:00\n",
       "Data filtered to include only rows before 2025-09-29 00:00:00\n"
      ]
     }
@@ -341,7 +363,9 @@
     "# Filter data_features to include only rows after the date N due to feature availability\n",
     "N = 151\n",
     "filtered_data = data_features[data_features.index > data_features.index[N]]\n",
+    "first_date = filtered_data.index.min()\n",
     "last_date = filtered_data.index.max()\n",
+    "print(f'Data filtered to include only rows after {first_date}')\n",
     "print(f\"Data filtered to include only rows before {last_date}\")"
    ]
   },
@@ -354,68 +378,78 @@
    "source": [
     "# Fit model and parameters for each period and ticker\n",
     "\n",
-    "duration_period = 1/2 # % year\n",
-    "window_size = int(252* duration_period)\n",
-    "alpha_grid = np.linspace(0.01, 1.0, 20)\n",
+    "duration_period = 0.5 # % year\n",
+    "window_size = int(252 * duration_period)\n",
     "\n",
-    "tup = 0.5\n",
-    "tdown = -0.5\n",
+    "trigger_up_grid = np.linspace(0.01, 0.99, 10)\n",
+    "trigger_down_grid = np.linspace(-0.01, -0.99, 10)\n",
+    "alpha_grid = np.linspace(0.01, 1.0, 20)\n",
+    "max_iter_value = 10_000\n",
     "\n",
     "filtered_data = filtered_data.ffill()\n",
-    "tickers = filtered_data.columns.get_level_values(0).unique()\n",
+    "Tickers = filtered_data.columns.get_level_values(0).unique()\n",
     "\n",
-    "dates = filtered_data.index.unique()\n",
-    "time_splits = range(0, len(filtered_data) - 2 * window_size, window_size)\n",
+    "tscv = TimeSeriesSplit(n_splits=20, max_train_size=window_size)\n",
     "\n",
-    "metrics_perf_alpha = []\n",
+    "metrics_perf = []\n",
+    "current_step = 0\n",
+    "total_steps = tscv.get_n_splits(filtered_data)\n",
+    "for train_index, test_index in tscv.split(filtered_data):\n",
+    "    print(f'Processing fold {current_step + 1} / {total_steps}')\n",
+    "    \n",
+    "    current_step += 1\n",
+    "    train_data, test_data = filtered_data.iloc[train_index], filtered_data.iloc[test_index]\n",
     "\n",
-    "for start in time_splits:\n",
-    "    print(f\"Processing period starting at index {start}, date {filtered_data.index[start]}\")\n",
-    "    end = start + 2 * window_size\n",
-    "    train_data = filtered_data.iloc[start:start + window_size]\n",
-    "    test_data = filtered_data.iloc[start + window_size:end]\n",
-    "\n",
-    "    for ticker in tickers:\n",
-    "        # Prepare training and testing datasets\n",
-    "        X_train = train_data[ticker].drop(columns=['Signal'])\n",
-    "        Y_train = train_data[ticker]['Signal']\n",
-    "\n",
-    "        X_test = test_data[ticker].drop(columns=['Signal'])\n",
-    "        Y_test = test_data[ticker]['Signal']\n",
+    "    for ticker in Tickers:\n",
+    "        X_train, Y_train = train_data[ticker].drop(columns=['Signal']), train_data[ticker]['Signal']\n",
+    "        X_test, Y_test = test_data[ticker].drop(columns=['Signal']), test_data[ticker]['Signal']\n",
     "\n",
     "        # Standardize features\n",
     "        scaler = StandardScaler()\n",
     "        X_train_scaled = scaler.fit_transform(X_train)\n",
     "        X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "        # Hyperparameter tuning for alpha\n",
+    "        grid_search = GridSearchCV(\n",
+    "            Lasso(max_iter=max_iter_value),\n",
+    "            param_grid={'alpha': alpha_grid},\n",
+    "            scoring='neg_mean_squared_error',\n",
+    "            cv=TimeSeriesSplit(n_splits=2, max_train_size=window_size),\n",
+    "            n_jobs=-1\n",
+    "        )\n",
+    "\n",
+    "        grid_search.fit(X_train_scaled, Y_train)\n",
+    "\n",
+    "        best_alpha = grid_search.best_params_['alpha']\n",
+    "        best_model = grid_search.best_estimator_\n",
+    "\n",
+    "        Y_train_pred_src = best_model.predict(X_train_scaled)\n",
+    "        Y_test_pred_src = best_model.predict(X_test_scaled)\n",
+    "\n",
+    "        # Find optimal triggers based on performance metrics\n",
+    "        best_trigger_up = None\n",
+    "        best_trigger_down = None\n",
     "        best_return_train = -np.inf\n",
     "        best_return_test = -np.inf\n",
-    "        best_alpha = 0.01\n",
     "\n",
-    "        for alpha_ in alpha_grid:\n",
-    "            # Fit model (e.g., Lasso Regression)\n",
-    "            model = Lasso(max_iter=10_000, alpha=alpha_)\n",
-    "            model.fit(X_train_scaled, Y_train)\n",
+    "        for trigger_up in trigger_up_grid:\n",
+    "            for trigger_down in trigger_down_grid:\n",
+    "                Y_train_pred = np.where(Y_train_pred_src > trigger_up, 1, \n",
+    "                                       np.where(Y_train_pred_src < trigger_down, -1, 0))\n",
+    "                Y_test_pred = np.where(Y_test_pred_src > trigger_up, 1, \n",
+    "                                      np.where(Y_test_pred_src < trigger_down, -1, 0))\n",
     "\n",
-    "            # Make predictions\n",
-    "            Y_pred_train = model.predict(X_train_scaled)\n",
-    "            Y_pred_test = model.predict(X_test_scaled)\n",
+    "                # Evaluate performance\n",
+    "                Return = np.array(X_test.DD_Return.shift(-1).fillna(0))\n",
+    "                return_predicted_train = float(np.sum(Y_train_pred * X_train.DD_Return.shift(-1).fillna(0)))\n",
+    "                return_predicted_test = float(np.sum(Y_test_pred * Return))\n",
     "\n",
-    "            Y_pred_train = np.where(Y_pred_train > tup, 1, np.where(Y_pred_train < tdown, -1, 0))\n",
-    "            Y_pred_test = np.where(Y_pred_test > tup, 1, np.where(Y_pred_test < tdown, -1, 0))\n",
+    "                if return_predicted_train > best_return_train:\n",
+    "                    best_return_train = return_predicted_train\n",
+    "                    best_return_test = return_predicted_test\n",
+    "                    best_trigger_up = trigger_up\n",
+    "                    best_trigger_down = trigger_down\n",
     "\n",
-    "            # Evaluate performance\n",
-    "            Return = np.array(X_test.DD_Return.shift(-1).fillna(0))\n",
-    "            return_predicted_train = float(np.sum(Y_pred_train * X_train.DD_Return.shift(-1).fillna(0)))\n",
-    "            return_predicted_test = float(np.sum(Y_pred_test * Return))\n",
-    "\n",
-    "            if return_predicted_train > best_return_train:\n",
-    "                best_return_train = return_predicted_train\n",
-    "                best_return_test = return_predicted_test\n",
-    "                best_alpha = alpha_\n",
-    "\n",
-    "        metrics_perf_alpha.append({\n",
+    "        metrics_perf.append({\n",
     "            'Ticker': ticker,\n",
     "            'Train Start': train_data.index.min(),\n",
     "            'Train End': train_data.index.max(),\n",
@@ -423,12 +457,14 @@
     "            'Test End': test_data.index.max(),\n",
     "            'Return_Predicted_Train': best_return_train,\n",
     "            'Return_Predicted_Test': best_return_test,\n",
-    "            'Train < Test': 1 if best_return_train < best_return_test else 0,\n",
-    "            'Alpha': best_alpha\n",
-    "        })\n",
-    "        \n",
-    "metrics_perf_alpha_df = pd.DataFrame(metrics_perf_alpha)\n",
-    "metrics_perf_alpha_df.head()"
+    "            'Market_Return_Train': market_return_train,\n",
+    "            'Market_Return_Test': market_return_test,\n",
+    "            'Ratio_Train': best_return_train / market_return_train if market_return_train != 0 else 0,\n",
+    "            'Model_train_>_Market_train': 1 if best_return_train > market_return_train else 0,\n",
+    "            'Model_test_>_Market_test': 1 if best_return_test > market_return_test else 0,\n",
+    "            'Trigger_Up': best_trigger_up,\n",
+    "            'Trigger_Down': best_trigger_down,\n",
+    "        })"
    ]
   },
   {
