--- a/1_data_features.ipynb
+++ b/1_data_features.ipynb
@@ -56,22 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "451371fb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'shift'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 65\u001b[39m\n\u001b[32m     63\u001b[39m     \u001b[38;5;66;03m#Target signal to predict\u001b[39;00m\n\u001b[32m     64\u001b[39m     data[(ticker, \u001b[33m'\u001b[39m\u001b[33mSignal\u001b[39m\u001b[33m'\u001b[39m)] = signal\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m     data[(ticker, \u001b[33m'\u001b[39m\u001b[33mSignal\u001b[39m\u001b[33m'\u001b[39m)] = \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mticker\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSignal\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshift\u001b[49m(-\u001b[32m1\u001b[39m).ffill(\u001b[32m0\u001b[39m)  \u001b[38;5;66;03m# Shift signal to align with next day's return\u001b[39;00m\n\u001b[32m     67\u001b[39m \u001b[38;5;66;03m# Create a DataFrame from the collected data\u001b[39;00m\n\u001b[32m     68\u001b[39m new_columns_df = pd.DataFrame(data)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'shift'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Signal trigger\n",
     "Trigger_up = 0.005\n",
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "50888006",
    "metadata": {},
    "outputs": [
@@ -160,28 +148,12 @@
      "text": [
       "features available: Index(['Stochastic', 'William', 'Basic_Mid', 'Close_to_High', 'Close_to_Low',\n",
       "       'DD_Return', 'Close_MA_5', 'Close_STD_5', 'Close_GROWTH_5',\n",
-      "       'Close_MA_10', 'Close_STD_10', 'Close_GROWTH_10', 'Close_MA_15',\n",
-      "       'Close_STD_15', 'Close_GROWTH_15', 'Close_MA_35', 'Close_STD_35',\n",
-      "       'Close_GROWTH_35', 'Close_MA_40', 'Close_STD_40', 'Close_GROWTH_40',\n",
-      "       'Close_MA_45', 'Close_STD_45', 'Close_GROWTH_45', 'High_MA_5',\n",
-      "       'High_STD_5', 'High_GROWTH_5', 'High_MA_10', 'High_STD_10',\n",
-      "       'High_GROWTH_10', 'High_MA_15', 'High_STD_15', 'High_GROWTH_15',\n",
-      "       'High_MA_35', 'High_STD_35', 'High_GROWTH_35', 'High_MA_40',\n",
-      "       'High_STD_40', 'High_GROWTH_40', 'High_MA_45', 'High_STD_45',\n",
-      "       'High_GROWTH_45', 'Low_MA_5', 'Low_STD_5', 'Low_GROWTH_5', 'Low_MA_10',\n",
-      "       'Low_STD_10', 'Low_GROWTH_10', 'Low_MA_15', 'Low_STD_15',\n",
-      "       'Low_GROWTH_15', 'Low_MA_35', 'Low_STD_35', 'Low_GROWTH_35',\n",
-      "       'Low_MA_40', 'Low_STD_40', 'Low_GROWTH_40', 'Low_MA_45', 'Low_STD_45',\n",
-      "       'Low_GROWTH_45', 'Close_TREND_50', 'Close_STD_50', 'Close_GROWTH_50',\n",
-      "       'Close_TREND_100', 'Close_STD_100', 'Close_GROWTH_100',\n",
-      "       'Close_TREND_150', 'Close_STD_150', 'Close_GROWTH_150', 'High_TREND_50',\n",
-      "       'High_STD_50', 'High_GROWTH_50', 'High_TREND_100', 'High_STD_100',\n",
-      "       'High_GROWTH_100', 'High_TREND_150', 'High_STD_150', 'High_GROWTH_150',\n",
-      "       'Low_TREND_50', 'Low_STD_50', 'Low_GROWTH_50', 'Low_TREND_100',\n",
-      "       'Low_STD_100', 'Low_GROWTH_100', 'Low_TREND_150', 'Low_STD_150',\n",
-      "       'Low_GROWTH_150', 'Close_CORR_5', 'Close_CORR_10', 'Close_CORR_15',\n",
-      "       'Close_CORR_35', 'Close_CORR_40', 'Close_CORR_45', 'Signal'],\n",
-      "      dtype='object')\n"
+      "       'Close_Above_MA_5',\n",
+      "       ...\n",
+      "       'Low_GROWTH_150', 'Low_Above_TREND_150', 'Low_Above_STD_150',\n",
+      "       'Close_CORR_5', 'Close_CORR_10', 'Close_CORR_15', 'Close_CORR_35',\n",
+      "       'Close_CORR_40', 'Close_CORR_45', 'Signal'],\n",
+      "      dtype='object', length=148)\n"
      ]
     }
    ],
@@ -192,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "20b74bbe",
    "metadata": {},
    "outputs": [],
