Add metrics summary CSV for Random Forest model performance analysis

--- a/1_data_features.ipynb
+++ b/1_data_features.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "451371fb",
    "metadata": {},
    "outputs": [],
@@ -123,6 +123,14 @@
     "        # Correlation with VIX\n",
     "        data[(ticker, f'Close_CORR_{N}')] = data[(ticker, f'Close_STD_{N}')].rolling(window=N).corr(data_raw[('^VIX', 'Close')].rolling(window=N).mean())\n",
     "        \n",
+    "\n",
+    "    #adding lagged features\n",
+    "    lag_days = [1,2,3,4,5]\n",
+    "    feature_names = ['Stochastic', 'William', 'Basic_Mid', 'Close_to_High', 'Close_to_Low', 'DD_Return']\n",
+    "    for feature in feature_names:\n",
+    "        for lag in lag_days:\n",
+    "            data[(ticker, f'{feature}_lag_{lag}')] = data[(ticker, feature)].shift(lag)\n",
+    "\n",
     "    #Target signal to predict\n",
     "    data[(ticker, 'Signal')] = signal\n",
     "    shifted_signal = np.empty_like(signal)\n",
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "50888006",
    "metadata": {},
    "outputs": [
@@ -150,10 +158,10 @@
       "       'DD_Return', 'Close_MA_5', 'Close_STD_5', 'Close_GROWTH_5',\n",
       "       'Close_Above_MA_5',\n",
       "       ...\n",
-      "       'Low_GROWTH_150', 'Low_Above_TREND_150', 'Low_Above_STD_150',\n",
-      "       'Close_CORR_5', 'Close_CORR_10', 'Close_CORR_15', 'Close_CORR_35',\n",
-      "       'Close_CORR_40', 'Close_CORR_45', 'Signal'],\n",
-      "      dtype='object', length=148)\n"
+      "       'Close_to_Low_lag_2', 'Close_to_Low_lag_3', 'Close_to_Low_lag_4',\n",
+      "       'Close_to_Low_lag_5', 'DD_Return_lag_1', 'DD_Return_lag_2',\n",
+      "       'DD_Return_lag_3', 'DD_Return_lag_4', 'DD_Return_lag_5', 'Signal'],\n",
+      "      dtype='object', length=178)\n"
      ]
     }
    ],
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "20b74bbe",
    "metadata": {},
    "outputs": [],
