Refactor metrics_selected_summary.csv: Update training and testing metrics with new data for improved accuracy and analysis

--- a/2_logistic_model.ipynb
+++ b/2_logistic_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0f5cf57b",
    "metadata": {},
    "outputs": [],
@@ -329,6 +329,48 @@
     "last_date = filtered_data.index.max()\n",
     "print(f'Data filtered to include only rows after {first_date}')\n",
     "print(f\"Data filtered to include only rows before {last_date}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26cd0110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find best features using SelectKBest on every ticker and keep most frequent features\n",
+    "\n",
+    "most_frequent_features = []\n",
+    "k_best_features = 70\n",
+    "required_col = 'DD_Return'\n",
+    "\n",
+    "for ticker in filtered_data.columns.get_level_values(0).unique():\n",
+    "    X = filtered_data[ticker].drop(columns=['Signal'])\n",
+    "    Y = filtered_data[ticker]['Signal']\n",
+    "    \n",
+    "    selector_var = VarianceThreshold(threshold=0.01)\n",
+    "    X_var = selector_var.fit_transform(X)\n",
+    "    selector = SelectKBest(score_func=f_classif, k=k_best_features)\n",
+    "    selector.fit(X_var, Y)\n",
+    "    \n",
+    "    selected_features = X.columns[selector.get_support(indices=True)].tolist()\n",
+    "    # Ensure required_col is included\n",
+    "    if required_col not in selected_features:\n",
+    "        selected_features.append(required_col)\n",
+    "    \n",
+    "    most_frequent_features.extend(selected_features)\n",
+    "\n",
+    "\n",
+    "most_frequent_features = pd.Series(most_frequent_features).value_counts().sort_values(ascending=False).head(k_best_features)\n",
+    "most_frequent_features = most_frequent_features.index.tolist()\n",
+    "\n",
+    "most_frequent_features.append('Signal')\n",
+    "\n",
+    "print(\"Most frequent features selected across all tickers:\")\n",
+    "print(most_frequent_features)\n",
+    "\n",
+    "# Remove unseen feature from filtered_data\n",
+    "filtered_data = filtered_data.loc[:, (slice(None), most_frequent_features)]"
    ]
   },
   {
