Remove outdated metrics summary and add new PNL data for linear and random forest models

--- a/2_SVC_model.ipynb
+++ b/2_SVC_model.ipynb
@@ -500,6 +500,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a02855c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PNL_data.to_csv('model/randomforest/PNL_selected_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2ea04406",
    "metadata": {},
    "outputs": [],
