--- a/2_linear_model.ipynb
+++ b/2_linear_model.ipynb
@@ -3489,6 +3489,16 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "9a053622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PNL_data.to_csv('model/linear/PNL_selected_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "0d21107f",
    "metadata": {},
    "outputs": [
@@ -3971,7 +3981,7 @@
        "38               0.814473           25.770036  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3995,7 +4005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "55bcc7e7",
    "metadata": {},
    "outputs": [
