--- a/2_randomforest_model.ipynb
+++ b/2_randomforest_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "bb01be35",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "[5 rows x 24564 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "65ec1130",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "352cfa48",
    "metadata": {},
    "outputs": [
@@ -570,6 +570,8 @@
       "c:\\Users\\luang\\Documents\\Sharp_Predict_V1\\.venv\\Lib\\site-packages\\sklearn\\feature_selection\\_univariate_selection.py:782: UserWarning: k=70 is greater than n_features=51. All the features will be returned.\n",
       "  warnings.warn(\n",
       "c:\\Users\\luang\\Documents\\Sharp_Predict_V1\\.venv\\Lib\\site-packages\\sklearn\\feature_selection\\_univariate_selection.py:782: UserWarning: k=70 is greater than n_features=58. All the features will be returned.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\luang\\Documents\\Sharp_Predict_V1\\.venv\\Lib\\site-packages\\sklearn\\feature_selection\\_univariate_selection.py:782: UserWarning: k=70 is greater than n_features=57. All the features will be returned.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -579,14 +581,6 @@
      "text": [
       "Most frequent features selected across all tickers:\n",
       "['Stochastic', 'William', 'DD_Return', 'Close_GROWTH_40', 'Close_Above_MA_35', 'Close_GROWTH_10', 'High_STD_10', 'High_Above_MA_10', 'High_MA_10', 'High_STD_15', 'High_GROWTH_5', 'Close_MA_10', 'Close_GROWTH_5', 'Close_MA_45', 'High_Above_MA_5', 'High_Above_STD_15', 'Close_Above_STD_10', 'Close_to_Low', 'Close_STD_40', 'Close_Above_MA_10', 'Close_Above_STD_5', 'Close_Above_MA_5', 'High_Above_STD_5', 'Close_Above_STD_35', 'High_GROWTH_10', 'High_Above_STD_10', 'High_Above_MA_15', 'High_MA_15', 'Close_GROWTH_35', 'High_GROWTH_15', 'Close_Above_STD_40', 'Close_Above_MA_45', 'High_MA_5', 'Basic_Mid', 'Close_MA_15', 'Close_STD_10', 'Close_MA_40', 'Close_MA_5', 'Close_Above_MA_40', 'Close_MA_35', 'Close_GROWTH_45', 'Close_STD_5', 'Close_STD_15', 'Close_Above_MA_15', 'Close_STD_45', 'Close_Above_STD_45', 'Close_STD_35', 'High_STD_5', 'Close_Above_STD_15', 'Close_GROWTH_15', 'Close_to_High', 'High_MA_35', 'High_STD_35', 'High_GROWTH_35', 'High_Above_MA_35', 'High_Above_STD_35', 'High_MA_40', 'High_STD_40', 'High_Above_STD_40', 'High_MA_45', 'High_Above_MA_40', 'High_GROWTH_40', 'High_STD_45', 'High_GROWTH_45', 'High_Above_MA_45', 'Low_MA_5', 'Low_STD_5', 'High_Above_STD_45', 'Low_GROWTH_5', 'Low_Above_MA_5', 'Signal']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\luang\\Documents\\Sharp_Predict_V1\\.venv\\Lib\\site-packages\\sklearn\\feature_selection\\_univariate_selection.py:782: UserWarning: k=70 is greater than n_features=57. All the features will be returned.\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -628,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "890709bd",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1006,7 @@
        "[5382 rows x 17 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "2732c606",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1729,7 @@
        "2024-09-26  2025-03-28 2025-03-31 2025-09-29            0.191733  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "2f86c477",
    "metadata": {},
    "outputs": [
@@ -1787,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "32f868e8",
    "metadata": {},
    "outputs": [
@@ -1815,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "3e5ab9b9",
    "metadata": {},
    "outputs": [],
@@ -1838,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "b6ccb755",
    "metadata": {},
    "outputs": [
@@ -2321,7 +2315,7 @@
        "38               0.098916           20.286964  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2346,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "e690cc67",
    "metadata": {},
    "outputs": [
@@ -2415,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "adaf45d6",
    "metadata": {},
    "outputs": [
@@ -2750,7 +2744,7 @@
        "[1365 rows x 14 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2823,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "4654d5e9",
    "metadata": {},
    "outputs": [
@@ -3432,7 +3426,7 @@
        "2024-09-26  2025-03-28 2025-03-31 2025-09-29            0.243769  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3451,7 +3445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "fc0d65f0",
    "metadata": {},
    "outputs": [
@@ -3484,7 +3478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "3aca5de8",
    "metadata": {},
    "outputs": [
@@ -3512,7 +3506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "9586493c",
    "metadata": {},
    "outputs": [],
@@ -3535,7 +3529,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
+   "id": "314f03f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PNL_data.to_csv('model/randomforest/PNL_selected_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "2ea04406",
    "metadata": {},
    "outputs": [
@@ -4018,7 +4022,7 @@
        "38               0.105544           26.907642  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4042,7 +4046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "f8f2b939",
    "metadata": {},
    "outputs": [
