Refactor code structure in 0_getting_data.ipynb: Rearrange imports and improve comment formatting for clarity

--- a/0_getting_data.ipynb
+++ b/0_getting_data.ipynb
@@ -2,19 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "003d1ba5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# most traded stock + VIX the 19 november 2025 and listed before 2005\n",
-    "most_traded_ticker = [\"^VIX\", \"AAPL\", \"ABEV\", \"ABT\", \"AES\", \"AMAT\", \"AMD\", \"AMZN\", \"APA\", \"APH\", \"ASX\", \"AZN\", \"B\", \"BA\", \"BAC\", \"BAX\", \"BB\", \"BBD\", \"BBWI\", \"BCS\", \"BKR\", \"BMY\", \"BP\", \"BSX\", \"C\", \"CAG\", \"CCJ\", \"CCL\", \"CDE\", \"CLF\", \"CMCSA\", \"CNC\", \"CNQ\", \"CPRT\", \"CRM\", \"CSCO\", \"CSX\", \"CTRA\", \"CVX\", \"DIS\", \"DVN\", \"EQNR\", \"EQT\", \"ERIC\", \"ES\", \"EXAS\", \"EXC\", \"F\", \"FAST\", \"FCX\", \"FE\", \"FHN\", \"GAP\", \"GGB\", \"GOOG\", \"GOOGL\", \"GSK\", \"HAL\", \"HBAN\", \"HD\", \"HL\", \"HPQ\", \"HST\", \"IAG\", \"INFY\", \"INTC\", \"IPG\", \"IRM\", \"ITUB\", \"JHX\", \"JNJ\", \"KEY\", \"KGC\", \"KMB\", \"KO\", \"KR\", \"LEN\", \"LNW\", \"LOW\", \"LRCX\", \"LUMN\", \"LUV\", \"LYG\", \"MCHP\", \"MDLZ\", \"MDT\", \"MNST\", \"MRK\", \"MRVL\", \"MS\", \"MSFT\", \"MSTR\", \"MU\", \"NEE\", \"NEM\", \"NFLX\", \"NGD\", \"NKE\", \"NOK\", \"NVDA\", \"NVO\", \"ON\", \"ORCL\", \"OXY\", \"PBR\", \"PBR-A\", \"PCG\", \"PFE\", \"PLUG\", \"PPL\", \"PTEN\", \"QCOM\", \"RF\", \"RIG\", \"SBUX\", \"SHEL\", \"SLB\", \"SONY\", \"T\", \"TEVA\", \"TGT\", \"TJX\", \"TSCO\", \"TSM\", \"TU\", \"TXN\", \"UMC\", \"UNH\", \"USB\", \"VALE\", \"VLY\", \"VTRS\", \"VZ\", \"WDC\", \"WFC\", \"WIT\", \"WMT\", \"XOM\"]\n",
-    "start_date = \"2005-01-01\"\n",
-    "end_date = \"2025-09-30\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "006676ff",
    "metadata": {},
@@ -24,6 +11,19 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "003d1ba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Most traded stock + VIX the 19 november 2025 and listed before 2005\n",
+    "most_traded_ticker = [\"^VIX\", \"AAPL\", \"ABEV\", \"ABT\", \"AES\", \"AMAT\", \"AMD\", \"AMZN\", \"APA\", \"APH\", \"ASX\", \"AZN\", \"B\", \"BA\", \"BAC\", \"BAX\", \"BB\", \"BBD\", \"BBWI\", \"BCS\", \"BKR\", \"BMY\", \"BP\", \"BSX\", \"C\", \"CAG\", \"CCJ\", \"CCL\", \"CDE\", \"CLF\", \"CMCSA\", \"CNC\", \"CNQ\", \"CPRT\", \"CRM\", \"CSCO\", \"CSX\", \"CTRA\", \"CVX\", \"DIS\", \"DVN\", \"EQNR\", \"EQT\", \"ERIC\", \"ES\", \"EXAS\", \"EXC\", \"F\", \"FAST\", \"FCX\", \"FE\", \"FHN\", \"GAP\", \"GGB\", \"GOOG\", \"GOOGL\", \"GSK\", \"HAL\", \"HBAN\", \"HD\", \"HL\", \"HPQ\", \"HST\", \"IAG\", \"INFY\", \"INTC\", \"IPG\", \"IRM\", \"ITUB\", \"JHX\", \"JNJ\", \"KEY\", \"KGC\", \"KMB\", \"KO\", \"KR\", \"LEN\", \"LNW\", \"LOW\", \"LRCX\", \"LUMN\", \"LUV\", \"LYG\", \"MCHP\", \"MDLZ\", \"MDT\", \"MNST\", \"MRK\", \"MRVL\", \"MS\", \"MSFT\", \"MSTR\", \"MU\", \"NEE\", \"NEM\", \"NFLX\", \"NGD\", \"NKE\", \"NOK\", \"NVDA\", \"NVO\", \"ON\", \"ORCL\", \"OXY\", \"PBR\", \"PBR-A\", \"PCG\", \"PFE\", \"PLUG\", \"PPL\", \"PTEN\", \"QCOM\", \"RF\", \"RIG\", \"SBUX\", \"SHEL\", \"SLB\", \"SONY\", \"T\", \"TEVA\", \"TGT\", \"TJX\", \"TSCO\", \"TSM\", \"TU\", \"TXN\", \"UMC\", \"UNH\", \"USB\", \"VALE\", \"VLY\", \"VTRS\", \"VZ\", \"WDC\", \"WFC\", \"WIT\", \"WMT\", \"XOM\"]\n",
+    "start_date = \"2005-01-01\"\n",
+    "end_date = \"2025-09-30\""
    ]
   },
   {
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "#get price for each ticker and store it\n",
+    "# Get price for each ticker and store it\n",
     "\n",
     "if not os.path.exists('raw_data/most_traded_stocks_data.csv'):\n",
     "    print(\"Downloading data...\")\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "59335d72",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "#get the traded currency for each ticker\n",
+    "# Get the traded currency for each ticker\n",
     "ticker_currency = {}\n",
     "if os.path.exists('raw_data/ticker_currency.csv'):\n",
     "    print(\"Loading ticker currency from CSV...\")\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "61832f43",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
     }
    ],
    "source": [
-    "#check if there is only USD stocks (avoid foreign exchange issues)\n",
+    "# Check if there is only USD stocks (avoid foreign exchange issues)\n",
     "def histogram_of_traded_currencies(ticker_currency):\n",
     "    # Convert the dictionary to a DataFrame for easier plotting\n",
     "    ticker_currency = ticker_currency\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "badbe570",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "#checking data quality for NA values\n",
+    "# Checking data quality for NA values\n",
     "def check_data_quality(tickers_data):\n",
     "    na_summary = {}\n",
     "    for ticker in most_traded_ticker:\n",
@@ -152,8 +152,7 @@
     "    return na_summary_df, sum_total_missing\n",
     "\n",
     "na_summary_df, sum_total_missing = check_data_quality(tickers_data)\n",
-    "print(f'Total missing values across all tickers: {sum_total_missing}')\n",
-    "#print(na_summary_df)"
+    "print(f'Total missing values across all tickers: {sum_total_missing}')"
    ]
   }
  ],
